Added Visa/Partners pages

--- a/Internation Affair Website/src/styles/Application.css
+++ b/Internation Affair Website/src/styles/Application.css
@@ -36,6 +36,7 @@
     width: 400px;  
   margin: 0 auto; 
   padding: 30px;
+  margin-bottom: 50px;
   margin-top: 75px;
   background-color: #38b2ac;
   justify-content:flex;
