--- a/Internation Affair Website/src/styles/Partners.css
+++ b/Internation Affair Website/src/styles/Partners.css
@@ -1,14 +1,18 @@
 .container-1 {
-    background-image: url('https://www.betterup.com/hubfs/Happy-work-team-cheering-and-celebrating-at-meeting-team-collaboration.jpg'); /* Add your background image */
-    background-size: cover;
-    background-position: center;
-    justify-content: stretch;
-    filter: brightness(75%);
-    color: white;
-    padding: 50px 240px;
-  }
+  height: 30rem;
+  background-image: url('../assets/iiitd-image3.jpeg'); /* Add your background image */
+  background-size: cover;
+  background-position: center -203px; /* Adjust vertical position to crop top and bottom */
+  justify-content: stretch;
+  filter: brightness(75%);
+  color: white;
+  padding: 50px 240px;
+  border-radius: 10px;
+  overflow: hidden; /* Ensure the cropped part is not shown */
+}
   
   .container-1 .content-1 {
+    margin-top: 8rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,9 +37,9 @@
   
   .container-1 .content-1 hr {
     border: none;
-    width: 3px;
+    width: 2px;
     height: 20rem;
-    background-color: rgb(48, 45, 45);
+    background-color: rgb(0, 53, 75);
     margin: 0 20px; 
     border-radius: 5px;
     transition: background 0.3s ease;
