--- a/Internation Affair Website/src/styles/Partners.css
+++ b/Internation Affair Website/src/styles/Partners.css
@@ -16,8 +16,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-style: italic;
   }
   
+  .container-1 .content-1 p ul {
+    font-weight: bold;
+  }
   .container-1 .content-1 h1 {
     padding: 20px;
     background-color: rgb(3, 61, 77);
